--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ a {
   color: #007b8e;
   text-decoration: none;
 }
-
+zz
 a:hover {
   color: #3b8af2;
   text-decoration: none;
@@ -1837,4 +1837,41 @@ section {
     text-align: center;
     padding: 2px 0;
   }
+}
+
+
+/*--------------------------------------------------------------
+# Programmes
+--------------------------------------------------------------*/
+.features .content+.content {
+  margin-top: 100px;
+}
+
+.features .content h3 {
+  font-weight: 700;
+  font-size: 26px;
+  color: #213b52;
+}
+.features .content p {
+text-align: justify;
+}
+
+
+.features .content ul {
+  list-style: none;
+  padding: 0;
+}
+
+.features .content ul li {
+  padding-bottom: 10px;
+}
+
+.features .content ul i {
+  font-size: 20px;
+  padding-right: 4px;
+  color: #fdc134;
+}
+
+.features .content p:last-child {
+  margin-bottom: 0;
 }
